# kubewarden-controller

./: .dockerignore  .gitignore  .golangci.yml  .test-release-file  .typos.toml  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.audit-scanner  Dockerfile.controller  Dockerfile.kubewarden-controller  Dockerfile.policy-server  ISSUE_1400_DESCRIPTION.md  Makefile  PROJECT  README.md  SECURITY-INSIGHTS.yml  SECURITY.md  SECURITY_INSIGHTS.yml  SUMMARY.md  Tiltfile  codecov.yml  deny.toml  environment.go  go.mod  go.sum  main.go  main_test.go  renovate.json  rust-toolchain.toml  tilt-settings.yaml.example  uninstall.sh
crates/burrego/: Cargo.toml  Makefile
crates/burrego/examples/cli/: main.rs
crates/burrego/examples/gatekeeper/: Makefile  always-accept.rego
crates/burrego/examples/opa/: Makefile  accept-in-namespaces.rego  always-accept.rego  always-reject.rego
crates/burrego/src/: evaluator.rs  evaluator_builder.rs  host_callbacks.rs  lib.rs  opa_host_functions.rs  policy.rs  stack_helper.rs
crates/burrego/src/builtins/: builtins_helper.rs  debugging.rs  encoding.rs  glob.rs  mod.rs  regex.rs  semver.rs  time.rs
crates/burrego/test_data/gatekeeper/: Makefile  e2e.bats  policy.rego  request-valid.json
crates/burrego/test_data/trace/: Makefile  e2e.bats
crates/kwctl/: .clomonitor.yml  .gitignore  .taplo.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY-INSIGHTS.yml  cli-docs.md  config.toml  kubewarden-load-policies.sh  kubewarden-save-policies.sh  renovate.json  rust-toolchain.toml
crates/kwctl/.cargo/: audit.toml
crates/kwctl/.chglog/: config.yml
crates/kwctl/.github/: dependabot.yml  release-drafter.yml
crates/kwctl/.github/workflows/: airgap-test.yml  build.yml  cargo-file-checks.yml  ci.yml  fossa.yml  openssf.yml  release-drafter.yml  release.yml  security-audit-cron.yml  security-audit-reactive.yml  source-code-checks.yml  tests.yml  update-rust-toolchain.yaml
crates/kwctl/e2e-tests/: e2e.bats  secure_supply_chain_tests.bats
crates/kwctl/e2e-tests/airgap/: insecure.yml  policies.txt
crates/kwctl/e2e-tests/test-data/: context-aware-policy-request-pod-creation-all-labels.json
crates/kwctl/scripts/: kubewarden-load-policies.sh  kubewarden-save-policies.sh
crates/kwctl/src/: annotate.rs  backend.rs  bench.rs  cli.rs  command.rs  completions.rs  config.rs  constants.rs  info.rs  inspect.rs  load.rs  main.rs  manifest.rs  metadata.rs  policies.rs  pull.rs  push.rs  rm.rs  run.rs  save.rs  scaffold.rs  sigstore.rs  utils.rs  verify.rs  wasm_scanner.rs
crates/kwctl/src/callback_handler/: mod.rs  proxy.rs
crates/kwctl/src/cli/: bench.rs  run.rs
crates/kwctl/src/command/: bench.rs  run.rs
crates/kwctl/src/config/: policy_definition.rs  pull_and_run.rs  sources.rs  verification.rs
crates/kwctl/src/scaffold/: admission_request.rs  artifacthub.rs  kubewarden_crds.rs  manifest.rs  resource_scope.rs  vap.rs  verification_config.rs
crates/kwctl/tests/: airgap.rs  e2e.rs  proxy.rs  secure_supply_chain_e2e.rs  sigstore.rs
crates/kwctl/tests/common/: mod.rs
crates/kwctl/tests/data/: context-aware-policy-request-pod-creation-all-labels.json  ingress.json  privileged-pod-admission-review.json  privileged-pod.json  settings_cel_type_error.json  unprivileged-pod-admission-review.json  unprivileged-pod.json
crates/kwctl/updatecli/: DEVELOP.md  values.yaml
crates/kwctl/updatecli/updatecli.d/: update-rust-toolchain.yaml
crates/policy-evaluator/: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  renovate.json  rust-toolchain.toml
crates/policy-evaluator/.github/workflows/: tests.yml  update-rust-toolchain.yaml
crates/policy-evaluator/crates/burrego/: .gitignore  Cargo.toml  (+2 more)
crates/policy-evaluator/src/: admission_request.rs  admission_response.rs  admission_response_handler.rs  callback_handler.rs  callback_requests.rs  cluster_context.rs  constants.rs  errors.rs  evaluation_context.rs  host_capabilities.rs  host_capabilities_allow_list.rs  lib.rs  policy.rs  policy_artifacthub.rs  policy_evaluator.rs  policy_evaluator_builder.rs  policy_group_evaluator.rs  policy_metadata.rs  policy_tracing.rs  runtime.rs  runtimes.rs  utils.rs  validation_response.rs
crates/policy-evaluator/tests/: integration_test.rs  proxy.rs
crates/policy-fetcher/: .gitignore  Cargo.toml  Makefile  README.md  renovate.json  rust-toolchain.toml
crates/policy-fetcher/.github/: dependabot.yml
crates/policy-fetcher/src/: errors.rs  fetcher.rs  https.rs  lib.rs  local.rs  policy.rs  proxy.rs  sources.rs  storage.rs  store.rs  verify.rs
crates/policy-fetcher/tests/: e2e.rs  parse_docker_config_json.rs  sources.rs  store.rs
crates/policy-server/: .gitignore  .syft.yaml  .typos.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.github  Makefile  PROFILING.md  README.md  SECURITY_INSIGHTS.yml  cli-docs.md  kubewarden-dashboard.json  otel-collector-minimal-config.yaml  policies.yml.example  prometheus.yml  renovate.json  rust-toolchain.toml  sources.yml.example  verification.yml.example
crates/policy-server/.cargo/: audit.toml  config  config.toml
crates/policy-server/.chglog/: config.yml
crates/policy-server/.github/: release-drafter.yml
crates/policy-server/e2e-tests/: .gitignore  01-setup.yml  02-monitor-and-protect-modes.yml  03-audit-endpoint.yml  04-timeout-protection.yml  05-rego-policy.yml  06-wasi-policy.yml  07-raw-policies.yml  99-teardown.yml  Makefile
crates/policy-server/hack/: docker-compose.yml  grafana-datasources.yml  otel-collector-minimal-config.yml  prometheus.yml
crates/policy-server/src/: admission_review.rs  api.rs  certs.rs  cli.rs  communication.rs  config.rs  constants.rs  evaluation.rs  kube_poller.rs  lib.rs  main.rs  metrics.rs  policies.rs  policy_downloader.rs  profiling.rs  raw_review.rs  server.rs  settings.rs  sigstore.rs  sources.rs  test_utils.rs  tracing.rs  utils.rs  validation_response.rs  wasm.rs  worker.rs  worker_pool.rs
crates/policy-server/tests/: integration_test.rs  sigstore.rs
(+961 files in other folders)
