[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["cargo", "env"] }
clap-markdown = "0.1.5"
futures = "0.3"
itertools = "0.14.0"
k8s-openapi = { version = "0.27.0", default-features = false, features = [
  "v1_33",
] }
kubewarden-policy-sdk = { version = "0.15.1" }
lazy_static = "1.5"
rayon = "1.11"
regex = "1"
rstest = "0.26"
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1", features = ["alloc"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "^1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = { version = "2.5", features = ["serde"] }
wasi-common = "41.0"
# Disable stack-switching for kwctl
# Replicate default features minus stack-switching
# Workaround for https://github.com/bytecodealliance/wasmtime/issues/12217
wasmtime = { version = "41.0", default-features = false, features = [
  "addr2line",
  "async",
  "cache",
  "compile-time-builtins",
  "component-model",
  "component-model-async",
  "coredump",
  "cranelift",
  "debug",
  "debug-builtins",
  "demangle",
  "gc",
  "gc-drc",
  "gc-null",
  "once_cell",
  "parallel-compilation",
  "pooling-allocator",
  "profiling",
  "runtime",
  "std",
  "threads",
  "wasmtime-jit-debug",
  "wasmtime-jit-icache-coherence",
  "wat",
] }
wasmtime-wasi = "41.0"
