[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["cargo", "env"] }
clap-markdown = "0.1.5"
futures = "0.3"
itertools = "0.14.0"
k8s-openapi = { version = "0.27.0", default-features = false, features = [
  "v1_33",
] }
kubewarden-policy-sdk = "0.16.0"
lazy_static = "1.5"
rayon = "1.11"
regex = "1"
rstest = "0.26"
rustls = "0.23"
rustls-pki-types = { version = "1", features = ["alloc"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "^1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = { version = "2.5", features = ["serde"] }
wasi-common = "41.0"
# We need to disable the default features here to be able to provide a specific
# set of features for kwctl on macOS x86_64
# Workaround for https://github.com/bytecodealliance/wasmtime/issues/12217
wasmtime      = { version = "41.0", default-features = false }
wasmtime-wasi = "41.0"
