[package]
name = "kwctl"
description = "Tool to manage Kubewarden policies"
version = "1.21.1"
authors = ["Kubewarden Developers <kubewarden@suse.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap_complete = "4.5"
clap = { version = "4.5", features = ["cargo", "env"] }
directories = "6.0.0"
clap-markdown = "0.1.4"
flate2 = "1.0.29"
humansize = "2.1"
itertools = "0.14.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = [
  "v1_30",
] }
lazy_static = "1.4.0"
pem = "3"
pulldown-cmark-mdcat = { version = "2.7.1", default-features = false }
policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.19.10" }
rustls-pki-types = { version = "1", features = ["alloc"] }
prettytable-rs = "^0.10"
pulldown-cmark = { version = "0.12.1", default-features = false }
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = { version = "5.2", default-features = false, features = [
  "default-syntaxes",
  "parsing",
] }
tar = "0.4.40"
thiserror = "2.0"
tiny-bench = "0.4"
tokio = { version = "^1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = "2.5.0"
walrus = "0.23.0"
wasmparser = "0.225"
time = "0.3.36"
semver = { version = "1.0.22", features = ["serde"] }

# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of kwctl
# This is required to have kwctl use the system certificates instead of the
# ones bundled inside of rustls
reqwest = { version = "0", default-features = false, features = [
  "rustls-tls-native-roots",
] }

[dev-dependencies]
assert_cmd = "2.0.14"
hyper = { version = "1.5.0" }
predicates = "3.1"
rstest = "0.24.0"
tempfile = "3.15"
testcontainers = { version = "0.23", features = ["blocking"] }
tower-test = "0.4"
