[package]
authors     = ["Kubewarden Developers <kubewarden@suse.de>"]
description = "Tool to manage Kubewarden policies"
edition     = "2021"
name        = "kwctl"
version     = "1.24.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "env"] }
clap-markdown = "0.1.4"
clap_complete = "4.5"
directories = "6.0.0"
flate2 = "1.1"
humansize = "2.1"
indicatif = "0.17"
is-terminal = "0.4.16"
itertools = "0.14.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = [
  "v1_30",
] }
lazy_static = "1.4.0"
pem = "3"
policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.23.0" }
prettytable-rs = "^0.10"
regex = "1"
rustls-pki-types = { version = "1", features = ["alloc"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tar = "0.4.40"
termimad = "0.31.2"
thiserror = "2.0"
time = "0.3.36"
tiny-bench = "0.4"
tokio = { version = "^1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = "2.5.0"
walrus = "0.23.0"
wasmparser = "0.230"

hostname-validator = "1.1.1"
# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of kwctl
# This is required to have kwctl use the system certificates instead of the
# ones bundled inside of rustls
reqwest = { version = "0", default-features = false, features = [
  "rustls-tls-native-roots",
] }

[dev-dependencies]
assert_cmd     = "2.0.14"
hyper          = { version = "1.5.0" }
predicates     = "3.1"
rstest         = "0.25"
tempfile       = "3.17"
testcontainers = { version = "0.24", features = ["blocking"] }
tower-test     = "0.4"
