[package]
authors     = ["Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
description = "Tool to manage Kubewarden policies"
edition     = "2024"
name        = "kwctl"
version     = "1.31.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
clap-markdown      = { workspace = true }
clap_complete      = "4.5"
color-print        = "0.3"
directories        = "6.0.0"
flate2             = "1.1"
humansize          = "2.1"
indicatif          = "0.18"
is-terminal        = "0.4.16"
itertools          = { workspace = true }
k8s-openapi        = { workspace = true }
lazy_static        = { workspace = true }
pem                = "3"
policy-evaluator   = { path = "../policy-evaluator" }
prettytable-rs     = "^0.10"
regex              = { workspace = true }
rustls-pki-types   = { workspace = true }
semver             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = { workspace = true }
tar                = "0.4.40"
termimad           = "0.34.0"
thiserror          = { workspace = true }
time               = "0.3.36"
tiny-bench         = "0.4"
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }
walrus             = "0.24.0"

hostname-validator = "1.1.1"
# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of kwctl
# This is required to have kwctl use the system certificates instead of the
# ones bundled inside of rustls
reqwest = { version = "0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
rustls = { version = "0.23", default-features = false }
sigstore_protobuf_specs = "0.5"

[dev-dependencies]
assert_cmd     = "2.0.14"
hyper          = { version = "1.5.0" }
predicates     = "3.1"
rstest         = { workspace = true }
sha2           = { workspace = true }
tempfile       = { workspace = true }
testcontainers = { version = "0.26", features = ["blocking"] }
tower-test     = "0.4"


[features]
sigstore-testing = []
