[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.com>",
]
edition = "2024"
name = "policy-evaluator"
version = "0.30.4"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
burrego = { path = "../burrego" }
cached = { version = "0.56", features = ["async_tokio_rt_multi_thread"] }
chrono = { version = "0.4", default-features = false }
dns-lookup = "3.0"
email_address = { version = "0.2", features = ["serde"] }
futures = { workspace = true }
itertools = { workspace = true }
json-patch = "4.1"
k8s-openapi = { workspace = true }
kube = { version = "3.0.1", default-features = false, features = [
  "client",
  "runtime",
  "rustls-tls",
] }
kubewarden-policy-sdk = { workspace = true, features = ["crd"] }
lazy_static = { workspace = true }
mail-parser = { version = "0.11", features = ["serde"] }
pki-types = { package = "rustls-pki-types", version = "1.14", default-features = false, features = [
  "std",
] }
policy-fetcher = { path = "../policy-fetcher" }
rhai = { version = "1.24", features = ["sync"] }
rustls-webpki = { version = "0.103", default-features = false, features = [
  "std",
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
validator = { version = "0.20", features = ["derive"] }
wapc = "2.1"
wasi-common = { workspace = true }
wasmparser = "0.245"
wasmtime-provider = { version = "2.16.0", features = ["cache"] }
wasmtime-wasi = { workspace = true }
webpki-roots = "1"

# Enable default features for all platforms except macOS x86_64
[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
wasmtime = { workspace = true, default-features = true }

# Disable stack-switching for kwctl on macOS x86_64
# Replicate default features minus stack-switching
# Workaround for https://github.com/bytecodealliance/wasmtime/issues/12217
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
wasmtime = { workspace = true, features = [
  "addr2line",
  "async",
  "cache",
  "compile-time-builtins",
  "component-model",
  "component-model-async",
  "coredump",
  "cranelift",
  "debug",
  "debug-builtins",
  "demangle",
  "gc",
  "gc-drc",
  "gc-null",
  "once_cell",
  "parallel-compilation",
  "pooling-allocator",
  "profiling",
  "runtime",
  "std",
  "threads",
  "wasmtime-jit-debug",
  "wasmtime-jit-icache-coherence",
  "wat",
] }


[dev-dependencies]
assert-json-diff = "2.0"
hyper            = { version = "1" }
rcgen            = { version = "0.14", features = ["x509-parser"] }
rstest           = { workspace = true }
serial_test      = "3.3"
tempfile         = { workspace = true }
test-context     = "0.5"
test-log         = "0.2"
tower-test       = "0.4"
# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of policy-fetcher
# This is required to have the integration tests use the system certificates instead of the
# ones bundled inside of rustls. This allows to pull the test policies also from
# self hosted registries (which is great at development time)
reqwest = { version = "0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
