[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "Kubewarden Developers <kubewarden@suse.de>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
]
edition = "2021"
name = "policy-fetcher"
version = "0.10.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.22"
cfg-if = "1.0"
directories = "6.0"
docker_credential = "1.3"
futures = "0.3"
lazy_static = "1.5"
oci-client = { version = "0.15", default-features = false, features = [
  "rustls-tls",
] }
path-slash = "0.2"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
] }
rustls-pki-types = "1" # stick to the same version used by sigstore
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sigstore = { version = "0.12", default-features = false, features = [
  "cached-client",
  "cosign",
  "rustls-tls",
  "sigstore-trust-root",
] }
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"
x509-parser = "0.17"

[dev-dependencies]
anyhow = "1.0"
rcgen = "0.13"
rstest = "0.25"
tempfile = "3.19"
testcontainers = { version = "0.24", default-features = false, features = [
  "aws-lc-rs",
  "http_wait",
] }
textwrap = "0.16"
