[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.com>",
]
edition = "2024"
name = "policy-fetcher"
version = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = { workspace = true }
cfg-if = "1.0"
directories = "6.0"
docker_credential = "1.3"
futures = { workspace = true }
lazy_static = { workspace = true }
oci-client = { version = "0.15", default-features = false, features = [
  "rustls-tls",
] }
path-slash = "0.2"
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
rustls = { workspace = true, features = ["std", "tls12"] }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sigstore = { version = "0.13", default-features = false, features = [
  "cached-client",
  "cosign",
  "rustls-tls",
  "sigstore-trust-root",
] }
thiserror = { workspace = true }
tokio = { version = "1", default-features = false }
tracing = { workspace = true }
url = { workspace = true }
walkdir = "2.5"
x509-parser = "0.18"

[dev-dependencies]
anyhow = { workspace = true }
rcgen = "0.14"
rstest = { workspace = true }
tempfile = { workspace = true }
testcontainers = { version = "0.26", default-features = false, features = [
  "aws-lc-rs",
  "http_wait",
] }
textwrap = "0.16"
