[package]
name = "policy-server"
version = "1.19.0"
authors = [
  "Kubewarden Developers <kubewarden@suse.de>",
  "Flavio Castelli <fcastelli@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "env"] }
daemonize = "0.5"
futures = "0.3"
itertools = "0.13.0"
k8s-openapi = { version = "0.23.0", default-features = false, features = [
  "v1_30",
] }
lazy_static = "1.4.0"
mime = "0.3"
num_cpus = "1.16.0"
opentelemetry-otlp = { version = "0.27.0", features = [
  "metrics",
  "tonic",
  "tls",
] }
opentelemetry = { version = "0.27.0", default-features = false, features = [
  "metrics",
  "trace",
] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
pprof = { version = "0.14", features = ["prost-codec"] }
policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.19.5" }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }
rustls-pki-types = { version = "1", features = ["alloc"] }
rayon = "1.10"
regex = "1.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "^1.42.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "json"] }
semver = { version = "1.0.22", features = ["serde"] }
mockall_double = "0.3"
axum = { version = "0.7.5", features = ["macros", "query"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tikv-jemallocator = { version = "0.5.4", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }
jemalloc_pprof = "0.4.1"
tikv-jemalloc-ctl = "0.5.4"
rhai = { version = "1.19.0", features = ["sync"] }
tonic = { version = "0.12.3" }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11"
tokio-stream = "0.1.15"

[dev-dependencies]
mockall = "0.13"
rstest = "0.23"
tempfile = "3.14.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1.1"
testcontainers = { version = "0.23", features = ["watchdog"] }
backon = { version = "1.3", features = ["tokio-sleep"] }
rcgen = { version = "0.13", features = ["crypto"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
openssl = "0.10"
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls-manual-roots",
] }
