[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Kubewarden Developers <kubewarden@suse.de>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
]
edition = "2021"
name = "policy-server"
version = "1.26.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros", "query"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["cargo", "env"] }
clap-markdown = "0.1.4"
daemonize = "0.5"
futures = "0.3"
itertools = "0.14.0"
jemalloc_pprof = "0.8.0"
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_30",
] }
lazy_static = "1.4.0"
mime = "0.3"
mockall_double = "0.3"
num_cpus = "1.16.0"
opentelemetry = { version = "0.30.0", default-features = false, features = [
  "metrics",
  "trace",
] }
opentelemetry-otlp = { version = "0.30.0", features = [
  "grpc-tonic",
  "metrics",
  "tls",
  "tonic",
] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.28.0" }
pprof = { version = "0.15", features = ["prost-codec"] }
rayon = "1.10"
regex = "1.10"
rustls = { version = "0.23", default-features = false, features = [
  "logging",
  "ring",
  "std",
  "tls12",
] }
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1", features = ["alloc"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10"
thiserror = "2.0"
tikv-jemalloc-ctl = "0.6.0"
tikv-jemallocator = { version = "0.6.0", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }
tokio = { version = "^1.43.0", features = ["full"] }
tonic = { version = "0.13.1" }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify      = "0.11"
tokio-stream = "0.1.15"

[dev-dependencies]
backon         = { version = "1.3", features = ["tokio-sleep"] }
http-body-util = "0.1.1"
mockall        = "0.13"
rcgen          = { version = "0.14", features = ["crypto"] }
rstest         = "0.25"
tempfile       = "3.16.0"
testcontainers = { version = "0.24", features = ["watchdog"] }
tower          = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
openssl = "0.10"
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls-manual-roots",
] }

[features]
otel_tests = []
