[package]
authors = [
  "Fabrizio Sestito <fabrizio.sestito@suse.com>",
  "Flavio Castelli <fcastelli@suse.com>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.com>",
]
edition = "2024"
name = "policy-server"
version = "1.32.1"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.8", features = ["macros", "query"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { workspace = true }
clap-markdown = { workspace = true }
daemonize = "0.5"
futures = { workspace = true }
itertools = { workspace = true }
jemalloc_pprof = "0.8"
k8s-openapi = { workspace = true }
lazy_static = { workspace = true }
mime = "0.3"
mockall_double = "0.3"
num_cpus = "1.17.0"
opentelemetry = { version = "0.31.0", default-features = false, features = [
  "metrics",
  "trace",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "grpc-tonic",
  "metrics",
  "tls",
  "tonic",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
policy-evaluator = { path = "../policy-evaluator" }
pprof = { version = "0.15", features = ["prost-codec"] }
rayon = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sigstore_protobuf_specs = "0.5"
thiserror = { workspace = true }
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }
tokio = { workspace = true }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify      = "0.11"
tokio-stream = "0.1.18"

[dev-dependencies]
backon         = { version = "1.6", features = ["tokio-sleep"] }
http-body-util = "0.1.3"
mockall        = "0.14"
rcgen          = { version = "0.14", features = ["crypto"] }
rstest         = { workspace = true }
tempfile       = { workspace = true }
testcontainers = { version = "0.27", features = ["watchdog"] }
tower          = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
openssl = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "http2",
] }

[features]
otel_tests       = []
sigstore-testing = []
