[package]
name = "burrego"
version = "0.3.4"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
chrono-tz = "0.8.5"
gtmpl = "0.7.1"
gtmpl_value = "0.5.1"
itertools = "0.12.1"
json-patch = "1.0.0"
lazy_static = "1.4.0"
regex = "1.5.6"
semver = "1.0.21"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.2.2"
wasmtime = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
assert-json-diff = "2.0.2"
clap = { version = "4.0", features = ["derive"] }
